--- a/_posts/2022-03-24-첫글.md
+++ b/_posts/2022-03-24-첫글.md
@@ -5,4 +5,5 @@ summary: This is a sample post
 author: Sungjin Lee
 date: '2022-03-24 14:19:00 +0900'
 category: code
+thumbnail: /assets/img/posts/code.jpg
 ---
