--- a/_posts/2022-03-24-첫글.md
+++ b/_posts/2022-03-24-첫글.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "첫 글"
 summary: This is a sample post 
-author: Sungjin Lee
+author: sungjin
 date: '2022-03-24 14:19:00 +0900'
 category: code
 thumbnail: /assets/img/posts/code.jpg
