--- a/_posts/2022-03-24-TEST.md
+++ b/_posts/2022-03-24-TEST.md
@@ -6,6 +6,7 @@ author: sungjin
 date: '2022-03-24 14:19:00 +0900'
 category: code
 thumbnail: /assets/img/posts/code.jpg
+permalink: /blog/TEST/
 ---
 
 ## Adding Multiple Categories in Posts
